@@ -1,3 +1,7 @@
+2015-01-28  Charlie Zender  <zender@uci.edu>
+
+	* Dynamically allocate dimension string info in nco_prn_var_dfn() so NCO works on AIRS files with loooong dimension names
+
 2015-01-26  Charlie Zender  <zender@uci.edu>
 
 	* Functionalize NSD algorithm into nco_var_bitmask()
